syntax = "proto3";

package infraboard.mpaas.image;
option go_package = "github.com/infraboard/mpaas/apps/image";

// 镜像仓库
message Registry {
    // 唯一ID
    // @gotags: json:"id" bson:"_id"
    string id = 1;
    // 录入时间
    // @gotags: json:"create_at" bson:"create_at"
    int64 create_at = 2;
    // 更新时间
    // @gotags: json:"update_at" bson:"update_at"
    int64 update_at = 3;
    // 更新人
    // @gotags: json:"update_by" bson:"update_by"
    string update_by = 4;
    // 基础信息
    // @gotags: json:"data" bson:"data"
    CreateRegistry data = 9;
}

message CreateRegistry {
    // 仓库名称, 唯一
    // @gotags: json:"name" bson:"name"
    string name = 1;
    // 仓库地址
    // @gotags: json:"address" bson:"address"
    string address = 2;
    // 描述
    // @gotags: json:"description" bson:"description"
    string description = 3;
    // 集群标签
    // @gotags: json:"lables" form:"lables" bson:"lables" 
    map<string, string> lables = 9;
}